<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:fitsSystemWindows="true"
    tools:context=".menu.MeuPlanoActivity">

    <!-- Header layout -->
<androidx.constraintlayout.widget.ConstraintLayout
android:id="@+id/header"
android:layout_width="match_parent"
android:layout_height="72dp"
android:background="@color/telalogin"
app:layout_constraintTop_toTopOf="parent">

<ImageView
    android:id="@+id/back_arrow"
    android:layout_width="48dp"
    android:layout_height="48dp"
    android:layout_marginEnd="16dp"
    android:src="@drawable/seta_voltar"
    android:contentDescription="@string/back_arrow_description"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintTop_toTopOf="parent"
    app:layout_constraintBottom_toBottomOf="parent"
    android:clickable="true"
    android:focusable="true"/>

<ImageView
    android:id="@+id/logo"
    android:layout_width="60dp"
    android:layout_height="50dp"
    android:layout_marginStart="16dp"
    android:contentDescription="@string/logo_description"
    android:src="@drawable/logo_odontoprev"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent" />

<TextView
    android:id="@+id/header_text"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginEnd="16dp"
    android:text="@string/meu_plano"
    android:textColor="@color/white"
    android:textSize="18sp"
    android:textStyle="bold"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintHorizontal_bias="0.36"
    app:layout_constraintStart_toEndOf="@+id/logo"
    app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>

<TextView
android:id="@+id/agenda"
android:layout_width="wrap_content"
android:layout_height="wrap_content"
android:gravity="center"
android:text="@string/cobertura"
android:textColor="@color/black"
android:textSize="24sp"
android:textStyle="bold"
app:layout_constraintTop_toBottomOf="@+id/header"
app:layout_constraintStart_toStartOf="parent"
app:layout_constraintEnd_toEndOf="parent"
android:layout_marginTop="16dp"/>

    <!-- Primeira linha de botões -->
<Button
android:id="@+id/buttonCirurgia"
android:layout_width="0dp"
android:layout_height="wrap_content"
android:layout_margin="8dp"
android:backgroundTint="@color/cinza_botao"
android:text="@string/cirurgia"
android:textColor="@color/black"
android:textSize="12sp"
app:layout_constraintWidth_default="spread"
app:layout_constraintTop_toBottomOf="@id/agenda"
app:layout_constraintStart_toStartOf="parent"
app:layout_constraintEnd_toStartOf="@+id/buttonConsultaRotina" />

<Button
android:id="@+id/buttonConsultaRotina"
android:layout_width="0dp"
android:layout_height="wrap_content"
android:layout_margin="8dp"
android:backgroundTint="@color/cinza_botao"
android:text="@string/consulta_rotina"
android:textColor="@color/black"
android:textSize="12sp"
app:layout_constraintWidth_default="spread"
app:layout_constraintStart_toEndOf="@+id/buttonCirurgia"
app:layout_constraintEnd_toStartOf="@+id/buttonTratamentoCanal"
app:layout_constraintTop_toBottomOf="@id/agenda" />

<Button
android:id="@+id/buttonTratamentoCanal"
android:layout_width="0dp"
android:layout_height="wrap_content"
android:layout_margin="8dp"
android:backgroundTint="@color/cinza_botao"
android:text="@string/tratamento_canal"
android:textColor="@color/black"
android:textSize="12sp"
app:layout_constraintWidth_default="spread"
app:layout_constraintStart_toEndOf="@+id/buttonConsultaRotina"
app:layout_constraintEnd_toEndOf="parent"
app:layout_constraintTop_toBottomOf="@id/agenda" />

    <!-- Segunda linha de botões -->
<Button
android:id="@+id/buttonCoroaBloco"
android:layout_width="0dp"
android:layout_height="wrap_content"
android:layout_margin="8dp"
android:backgroundTint="@color/cinza_botao"
android:text="@string/coroa_bloco"
android:textColor="@color/black"
android:textSize="12sp"
app:layout_constraintWidth_default="spread"
app:layout_constraintTop_toBottomOf="@id/buttonCirurgia"
app:layout_constraintStart_toStartOf="parent"
app:layout_constraintEnd_toStartOf="@+id/buttonEmergencia" />

<Button
android:id="@+id/buttonEmergencia"
android:layout_width="0dp"
android:layout_height="wrap_content"
android:layout_margin="8dp"
android:backgroundTint="@color/cinza_botao"
android:text="@string/emergencia"
android:textColor="@color/black"
android:textSize="12sp"
app:layout_constraintWidth_default="spread"
app:layout_constraintStart_toEndOf="@+id/buttonCoroaBloco"
app:layout_constraintEnd_toStartOf="@+id/buttonClareamento"
app:layout_constraintTop_toBottomOf="@id/buttonConsultaRotina" />

<Button
android:id="@+id/buttonClareamento"
android:layout_width="0dp"
android:layout_height="wrap_content"
android:layout_margin="8dp"
android:backgroundTint="@color/cinza_botao"
android:text="@string/clareamento"
android:textColor="@color/black"
android:textSize="12sp"
app:layout_constraintWidth_default="spread"
app:layout_constraintStart_toEndOf="@+id/buttonEmergencia"
app:layout_constraintEnd_toEndOf="parent"
app:layout_constraintTop_toBottomOf="@id/buttonTratamentoCanal" />

    <!-- Terceira linha de botões -->
<Button
android:id="@+id/buttonExames"
android:layout_width="0dp"
android:layout_height="wrap_content"
android:layout_margin="8dp"
android:backgroundTint="@color/cinza_botao"
android:text="@string/exames"
android:textColor="@color/black"
android:textSize="12sp"
app:layout_constraintWidth_default="spread"
app:layout_constraintTop_toBottomOf="@id/buttonCoroaBloco"
app:layout_constraintStart_toStartOf="parent"
app:layout_constraintEnd_toStartOf="@+id/buttonRestauracaoProtese" />

<Button
android:id="@+id/buttonRestauracaoProtese"
android:layout_width="0dp"
android:layout_height="wrap_content"
android:layout_margin="8dp"
android:backgroundTint="@color/cinza_botao"
android:text="@string/restauracao_protese"
android:textColor="@color/black"
android:textSize="12sp"
app:layout_constraintWidth_default="spread"
app:layout_constraintStart_toEndOf="@+id/buttonExames"
app:layout_constraintEnd_toStartOf="@+id/buttonTratamentoCarie"
app:layout_constraintTop_toBottomOf="@id/buttonEmergencia" />

<Button
android:id="@+id/buttonTratamentoCarie"
android:layout_width="0dp"
android:layout_height="wrap_content"
android:layout_margin="8dp"
android:backgroundTint="@color/cinza_botao"
android:text="@string/tratamento_carie"
android:textColor="@color/black"
android:textSize="12sp"
app:layout_constraintWidth_default="spread"
app:layout_constraintStart_toEndOf="@+id/buttonRestauracaoProtese"
app:layout_constraintEnd_toEndOf="parent"
app:layout_constraintTop_toBottomOf="@id/buttonClareamento" />

    <!-- Quarta linha de botões -->
<Button
android:id="@+id/buttonTeleconsulta"
android:layout_width="0dp"
android:layout_height="wrap_content"
android:layout_margin="8dp"
android:backgroundTint="@color/cinza_botao"
android:text="@string/teleconsulta"
android:textColor="@color/black"
android:textSize="12sp"
app:layout_constraintWidth_default="spread"
app:layout_constraintTop_toBottomOf="@id/buttonExames"
app:layout_constraintStart_toStartOf="parent"
app:layout_constraintEnd_toStartOf="@+id/buttonSiso" />

<Button
android:id="@+id/buttonSiso"
android:layout_width="0dp"
android:layout_height="wrap_content"
android:layout_margin="8dp"
android:backgroundTint="@color/cinza_botao"
android:text="@string/siso"
android:textColor="@color/black"
android:textSize="12sp"
app:layout_constraintWidth_default="spread"
app:layout_constraintStart_toEndOf="@+id/buttonTeleconsulta"
app:layout_constraintEnd_toStartOf="@+id/buttonTratamentoGengiva"
app:layout_constraintTop_toBottomOf="@id/buttonRestauracaoProtese" />

<Button
android:id="@+id/buttonTratamentoGengiva"
android:layout_width="0dp"
android:layout_height="wrap_content"
android:layout_margin="8dp"
android:backgroundTint="@color/cinza_botao"
android:text="@string/tratamento_gengiva"
android:textColor="@color/black"
android:textSize="12sp"
app:layout_constraintWidth_default="spread"
app:layout_constraintStart_toEndOf="@+id/buttonSiso"
app:layout_constraintEnd_toEndOf="parent"
app:layout_constraintTop_toBottomOf="@id/buttonTratamentoCarie" />

    </androidx.constraintlayout.widget.ConstraintLayout>
